# ndio-ffmpeg

./: CMakeLists.txt  LICENSE  ndio-ffmpeg-config.cmake.in
app/bench/: CMakeLists.txt  main.c
app/bench/cmake/: ndio-hdf5-config.cmake
cmake/: GenerateFFMPEG.cmake  bzip2-config.cmake  ffmpeg-config.cmake  nd-config.cmake  ogg-config.cmake  theora-config.cmake  vaapi-config.cmake  vpx-config.cmake  x264-config.cmake  xvid-config.cmake  zlib-config.cmake  zlib-patch.cmake.in
doc/: Doxyfile.in
ffmpeg/ffmpeg-20120630-git-3233ad4-win32-dev/: README.txt
ffmpeg/ffmpeg-20120630-git-3233ad4-win64-dev/include/libavutil/: common.h  pixdesc.h
ffmpeg/ffmpeg-20120630-git-3233ad4-win64-dev/lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  postproc.lib  swresample.lib  swscale.lib
ffmpeg/ffmpeg-20120630-git-3233ad4-win64-dev/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
ffmpeg/ffmpeg-20120630-git-3233ad4-win64-shared/: README.txt
src/: ndio-ffmpeg.c  ndio-ffmpeg.h  strsep.c  strsep.h
